--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongodb": "^6.1.0",
     "multer": "^1.4.5-lts.1",
     "node": "^21.0.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
   },
   "name": "grator-ajans-nodejs-panel",
